# migration-cloudflare

./: .gitignore  README.md  pyproject.toml  resource.example.json  resource.json
.history/: README_20260323234302.md  README_20260324104609.md  resource_20260323235052.json  resource_20260324103650.json  resource_20260324103925.json
docs/architecture/: README.md
src/app/: __init__.py  cloudflare_client.py  config.py  github_client.py  main.py  notifier.py
tests/: test_cloudflare_client.py  test_config.py  test_flow.py  test_github_client.py  test_notifier.py
